Temperature Delay fix and Temperature Estabilished ON

--- a/WebPage/index-model.html
+++ b/WebPage/index-model.html
@@ -22,6 +22,10 @@
         <main class="-mt-32">
             <div class="mx-auto max-w-max px-4 py-4 bg-gray-100 m-4 shadow sm:rounded-lg">
                 <div>
+                    <div>
+            <marquee>teste</marquee>>
+                </div>
+                
                     <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-4">
                         <div class="overflow-hidden rounded-lg bg-white shadow justify-center">
                             <h1 class="text-xl text-center p-4">Temperatura</h1>
